# corpus-tools

./: .gitignore  .gitmodules  Dockerfile  README.md  index.html  mkdocs.yml  reddit.sh  search.html  sitemap.xml
docker/: index.html
docs/: docker.md  index.md  ngram.md  uml.tex
docs/tex/: Readme.md
mkdocs/: search_index.json
ngram/: index.html
tex/Readme/: index.html
tools/: dataset.py  dialog_builder.py
tools/bash/: prettyGCloud.sh
tools/cpp/: CMakeLists.txt
tools/cpp/json2xml/: CMakeLists.txt
tools/cpp/json2xml/include/json2xml/: RedditNode.h  RedditTree.h  json2xml.h
tools/cpp/json2xml/src/: RedditTree.cpp  json2xml.cpp
tools/cpp/ngram/: CMakeLists.txt
tools/cpp/ngram/include/ngram/: ngram.h
tools/cpp/ngram/src/: ngram.cpp
tools/ngram/: CMakeLists.txt
tools/ngram/include/ngram/: ngram.h
tools/ngram/src/: ngram.cpp
tools/python/xml/: dialog_builder.py  preprocess.py
tools/xml/: dataset.py  dataset.xml  dialog_builder.py
